confik-macros/tests/trybuild/fail-config-alone.stderr
error: `#[config]` is not a valid standalone attribute
 --> tests/trybuild/fail-config-alone.rs:3:7
  |
3 |     #[config]
  |       ^^^^^^
